package com.skplanet.storeplatform.sac.client.intfmessage.product.vo;

option java_package = "com.skplanet.storeplatform.sac.client.intfmessage.product.vo";

message Accrual {
	optional string voterCount = 1;		//참여자수
	optional string downloadCount = 2;	//다운로드수
	optional double score = 3;			//평점
	optional string lastRank = 4;		//지난순위
	optional string feedbackTotal = 5;	//사용 후기 전체 개수
	optional string changeRank = 6;		//변동 순위, 하락은 음수로 표현한다.
	/*
	 * 평점상세정보
	 * "너무 좋아요", "만족해요", "좋아요", "그저 그래요", "별로에요" 순서로 정의
	 */
	optional string explain = 7;
}